# python-proxy

./: CLAUDE.md  LICENSE  README.md  config.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
examples/: CUSTOM_HOOKS_FOR_DUMMIES.md  HOOKS.md  NginxIntegration.md  REALMO_SETUP.md  USAGE.md  advanced_hooks.py  bash_wrapper_setup.md  config.yaml  config_with_hooks.yaml  config_with_includes.yaml  example_hooks.py  header_routing_hooks.py  json_hooks_example.yaml  local_domain_setup.md  port80_setup.md  realmo.com.local-example.yaml
examples/hooks/: api.example.com-post.yaml  api.example.com-pre.yaml  example.com-post.yaml  example.com-pre.yaml  realmo.com.local-post.yaml
examples/systemd/: README.md  python-proxy-with-socket.socket  python-proxy.service
python_proxy/: __init__.py  builtin_hooks.py  cli.py  config.py  hooks.py  proxy.py
scripts/: install_wrapper.sh  python-proxy-port80  setup_port80.sh
tests/: __init__.py  test_config.py  test_hooks.py  test_json_hooks.py  test_proxy.py
