[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "python-proxy"
version = "0.1.0"
description = "Transparent Python Proxy with request/response modification hooks"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "GPL-2.0"}
authors = [
    {name = "python-proxy contributors"}
]
dependencies = [
    "aiohttp>=3.8.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
python-proxy = "python_proxy.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["python_proxy*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []
